apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'

sourceCompatibility = 1.7
version = '1.0'
jar {
    manifest {
        attributes 'Implementation-Title': 'auto',
                   'Implementation-Version': version
    }
}

repositories {
    mavenCentral()
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.12'
}

dependencies {
    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.46.0'
    // compile group: 'org.jbehave', name: 'jbehave-core', version: '4.0'
    // compile group: 'org.jbehave.web', name: 'jbehave-web', version: '3.6-beta-2'
    //compile 'io.netty:netty-all:4.1.0.Beta5'
    compile 'info.cukes:cucumber-java:1.2.3'
    compile 'org.pcap4j:pcap4j-core:1.6.0'
    compile 'org.pcap4j:pcap4j-packetfactory-static:1.6.0'
    //compile 'org.pcap4j:pcap4j-packetfactory-propertiesbased:1.6.0'
    compile 'org.apache.logging.log4j:log4j-core:2.3'
    compile 'org.apache.logging.log4j:log4j-api:2.3'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.3'
    testCompile 'info.cukes:cucumber-junit:1.2.3'
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

test {
    systemProperties 'property': 'value'
    useJUnit {
    	includeCategories 'cn.zjp.category.Pcap'
    }
    // enable TestNG support (default is JUnit)
   	//useTestNG()

   	// set a system property for the test JVM(s)
   	systemProperty 'some.prop', 'value'

   	// explicitly include or exclude tests
   	//include 'cn/zjp/mock/**'
   	exclude 'cn/zjp/nio/**'
   	exclude 'cn/zjp/web/**'
   	filter{
    	//includeTestsMatching "cn.zjp.mock.network.IpV4HostTest"
    }

   	// listen to events in the test execution lifecycle
 	beforeTest { descriptor ->
      logger.lifecycle("Going To: " + descriptor)
	}
	testLogging { events 'started', 'passed', 'failed', 'skipped' }

	// show standard out and standard error of the test JVM(s) on the console
	//testLogging.showStandardStreams = true
	
	// set heap size for the test JVM(s)
  	minHeapSize = "128m"
   	maxHeapSize = "512m"

   	// set JVM arguments for the test JVM(s), but not for java8.0 anymore.
   	//jvmArgs '-XX:MaxPermSize=256m'
}

//uploadArchives {
//    repositories {
//       flatDir {
//           dirs 'repos'
//       }
//    }
//}
